--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<meta charset="UTF-8">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Title TBD</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">🌱<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">🌷🌷🌷</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">🌟🌟</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="jumbotron">
+    <h1>Hi!!!!</h1>
+    <p>
+      Jelly-o liquorice cookie muffin. Cupcake pie cupcake ice cream candy toffee apple pie marshmallow. Macaroon liquorice chupa chups cheesecake. Jelly dragée lollipop candy carrot cake bonbon.
+      Oat cake apple pie bear claw sweet roll biscuit icing tootsie roll danish. Chupa chups dessert jelly bonbon chocolate croissant cheesecake. Wafer sugar plum sweet lollipop lollipop.
+      Lemon drops candy canes cake marshmallow soufflé gummies caramels gummies cheesecake. Gummi bears halvah cookie pastry oat cake. Halvah cake chupa chups cheesecake tiramisu lemon drops chupa chups cupcake macaroon.
+    </p>
+  </div>
+</div>
+
 <marquee>wow here's something alright</marquee>
