--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -17,10 +18,9 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">🌱<span class="sr-only">(current)</span></a></li>
         <li><a href="#">🌷🌷🌷</a></li>
-      </ul>
-
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">🌟🌟</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">Projects</a></li>
       </ul>
     </div>
   </div>
@@ -34,7 +34,12 @@
       Oat cake apple pie bear claw sweet roll biscuit icing tootsie roll danish. Chupa chups dessert jelly bonbon chocolate croissant cheesecake. Wafer sugar plum sweet lollipop lollipop.
       Lemon drops candy canes cake marshmallow soufflé gummies caramels gummies cheesecake. Gummi bears halvah cookie pastry oat cake. Halvah cake chupa chups cheesecake tiramisu lemon drops chupa chups cupcake macaroon.
     </p>
+    <div style="text-align:center;">
+      <p>
+        <a href="#"><i class="fa fa-envelope"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
+      </p>
+    </div>
   </div>
 </div>
-
-<marquee>wow here's something alright</marquee>
