Add basic HTML document structure

--- a/index.html
+++ b/index.html
@@ -1,45 +1,53 @@
+<!DOCTYPE html>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Title TBD</a>
-    </div>
+<html>
+  <head>
+    <title>Title TBD</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Title TBD</a>
+        </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">🌱<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">🌷🌷🌷</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Projects</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">🌱<span class="sr-only">(current)</span></a></li>
+            <li><a href="#">🌷🌷🌷</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Projects</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<div class="container">
-  <div class="jumbotron">
-    <h1>Hi!!!!</h1>
-    <p>
-      Jelly-o liquorice cookie muffin. Cupcake pie cupcake ice cream candy toffee apple pie marshmallow. Macaroon liquorice chupa chups cheesecake. Jelly dragée lollipop candy carrot cake bonbon.
-      Oat cake apple pie bear claw sweet roll biscuit icing tootsie roll danish. Chupa chups dessert jelly bonbon chocolate croissant cheesecake. Wafer sugar plum sweet lollipop lollipop.
-      Lemon drops candy canes cake marshmallow soufflé gummies caramels gummies cheesecake. Gummi bears halvah cookie pastry oat cake. Halvah cake chupa chups cheesecake tiramisu lemon drops chupa chups cupcake macaroon.
-    </p>
-    <div style="text-align:center;">
-      <p>
-        <a href="#"><i class="fa fa-envelope"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
-      </p>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Hi!!!!</h1>
+        <p>
+          Jelly-o liquorice cookie muffin. Cupcake pie cupcake ice cream candy toffee apple pie marshmallow. Macaroon liquorice chupa chups cheesecake. Jelly dragée lollipop candy carrot cake bonbon.
+          Oat cake apple pie bear claw sweet roll biscuit icing tootsie roll danish. Chupa chups dessert jelly bonbon chocolate croissant cheesecake. Wafer sugar plum sweet lollipop lollipop.
+          Lemon drops candy canes cake marshmallow soufflé gummies caramels gummies cheesecake. Gummi bears halvah cookie pastry oat cake. Halvah cake chupa chups cheesecake tiramisu lemon drops chupa chups cupcake macaroon.
+        </p>
+        <div style="text-align:center;">
+          <p>
+            <a href="#"><i class="fa fa-envelope"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
+          </p>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+  </body>
+</html>
