--- a/index.html
+++ b/index.html
@@ -8,33 +8,10 @@
     <title>Title TBD</title>
   </head>
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Title TBD</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">🌱<span class="sr-only">(current)</span></a></li>
-            <li><a href="#">🌷🌷🌷</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">Projects</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
     <div class="container">
-      <div class="jumbotron">
-        <h1>Hi!!!!</h1>
+      <div class="jumbotron" style="background-color:#e0fff0;border-style:solid;border-color:#ffcb94;border-radius:30px;border-width:20px;text-align:center;">
+        <img style="border-radius:50%;" alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
+        <h2>Hi!!!!</h2>
         <p>
           Jelly-o liquorice cookie muffin. Cupcake pie cupcake ice cream candy toffee apple pie marshmallow. Macaroon liquorice chupa chups cheesecake. Jelly dragée lollipop candy carrot cake bonbon.
           Oat cake apple pie bear claw sweet roll biscuit icing tootsie roll danish. Chupa chups dessert jelly bonbon chocolate croissant cheesecake. Wafer sugar plum sweet lollipop lollipop.
@@ -45,6 +22,7 @@
             <a href="#"><i class="fa fa-envelope"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
           </p>
         </div>
       </div>
