--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
 
 <html>
   <head>
     <title>Title TBD</title>
   </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron" style="background-color:#e0fff0;border-style:solid;border-color:#ffcb94;border-radius:30px;border-width:20px;text-align:center;">
+  <body style="overflow:hidden;">
+      <div class="jumbotron" style="height:100vh;background-color:#e0fff0;border-style:solid;border-color:#ffcb94;border-width:20px;text-align:center;">
         <img style="border-radius:50%;" alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
-        <h2>Hi!!!!</h2>
+        <h1 style="font-family:'Pacifico',sans-serif;">Hi, I'm Anna!</h1>
         <p>
           Jelly-o liquorice cookie muffin. Cupcake pie cupcake ice cream candy toffee apple pie marshmallow. Macaroon liquorice chupa chups cheesecake. Jelly dragée lollipop candy carrot cake bonbon.
           Oat cake apple pie bear claw sweet roll biscuit icing tootsie roll danish. Chupa chups dessert jelly bonbon chocolate croissant cheesecake. Wafer sugar plum sweet lollipop lollipop.
@@ -22,10 +22,9 @@
             <a href="#"><i class="fa fa-envelope"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
           </p>
         </div>
       </div>
-    </div>
   </body>
 </html>
