--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
 
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
+    <link rel="stylesheet" href="styles.css">
     <title>Title TBD</title>
   </head>
-  <body style="overflow:hidden;">
-      <div class="jumbotron" style="height:100vh;background-color:#e0fff0;border-style:solid;border-color:#ffcb94;border-width:20px;text-align:center;">
-        <img style="border-radius:50%;" alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
-        <h1 style="font-family:'Pacifico',sans-serif;">Hi, I'm Anna!</h1>
+  <body>
+      <div class="jumbotron">
+        <img alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
+        <h1>Hi, I'm Anna!</h1>
         <p>
           Jelly-o liquorice cookie muffin. Cupcake pie cupcake ice cream candy toffee apple pie marshmallow. Macaroon liquorice chupa chups cheesecake. Jelly dragée lollipop candy carrot cake bonbon.
           Oat cake apple pie bear claw sweet roll biscuit icing tootsie roll danish. Chupa chups dessert jelly bonbon chocolate croissant cheesecake. Wafer sugar plum sweet lollipop lollipop.
           Lemon drops candy canes cake marshmallow soufflé gummies caramels gummies cheesecake. Gummi bears halvah cookie pastry oat cake. Halvah cake chupa chups cheesecake tiramisu lemon drops chupa chups cupcake macaroon.
         </p>
-        <div style="text-align:center;">
-          <p>
-            <a href="#"><i class="fa fa-envelope"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
-          </p>
-        </div>
+        <p>
+          <a href="#"><i class="fa fa-envelope"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
+        </p>
       </div>
   </body>
 </html>
