--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Title TBD</title>
   </head>
   <body>
-      <div class="jumbotron">
+      <div class="main">
         <img alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
         <h1>Hi, I'm Anna!</h1>
         <p>
@@ -23,6 +23,9 @@
           <a href="#"><i class="fa fa-twitter"></i></a>
           <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
           <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
+        </p>
+        <p>
+          <a href="#">Link Text</a>
         </p>
       </div>
   </body>
