add mobile styling, design

--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
     <title>Title TBD</title>
   </head>
   <body>
-      <div class="main">
-        <img alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
-        <h1>Hi, I'm Anna!</h1>
-        <p>
-          Jelly-o liquorice cookie muffin. Cupcake pie cupcake ice cream candy toffee apple pie marshmallow. Macaroon liquorice chupa chups cheesecake. Jelly dragée lollipop candy carrot cake bonbon.
-          Oat cake apple pie bear claw sweet roll biscuit icing tootsie roll danish. Chupa chups dessert jelly bonbon chocolate croissant cheesecake. Wafer sugar plum sweet lollipop lollipop.
-          Lemon drops candy canes cake marshmallow soufflé gummies caramels gummies cheesecake. Gummi bears halvah cookie pastry oat cake. Halvah cake chupa chups cheesecake tiramisu lemon drops chupa chups cupcake macaroon.
-        </p>
-        <p>
-          <a href="#"><i class="fa fa-envelope"></i></a>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-          <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
-        </p>
-        <p>
-          <a href="#">Link Text</a>
-        </p>
-      </div>
+    <div class="main">
+      <img alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
+
+      <h1>Hi, I'm <span class="name">Anna</span></h1>
+
+      <p>
+        Cake fruitcake tootsie roll apple pie ice cream I love. Donut chocolate marshmallow powder icing gummi bears marzipan candy. Lollipop sugar plum cake gummies soufflé toffee pie fruitcake candy.
+      </p>
+      <p>
+        Tootsie roll toffee ice cream chocolate bar oat cake chupa chups muffin cake jelly. Chocolate bar jelly I love pudding cotton candy lemon drops. Croissant pastry muffin croissant oat cake jelly beans.
+      </p>
+      <p>
+        Icing pastry tootsie roll sugar plum macaroon cheesecake bear claw. Sugar plum soufflé gingerbread oat cake bear claw cake pastry jujubes wafer. Lemon drops jelly tart I love cake sweet roll sweet. Muffin caramels jelly ice cream cupcake halvah candy canes cake.
+      </p>
+
+      <a href="#"><i class="fa fa-envelope"></i></a>
+      <a href="#"><i class="fa fa-twitter"></i></a>
+      <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
+      <a href="#">Resume</a>
+    </div>
   </body>
 </html>
