adds email address

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         Icing pastry tootsie roll sugar plum macaroon cheesecake bear claw. Sugar plum soufflé gingerbread oat cake bear claw cake pastry jujubes wafer. Lemon drops jelly tart I love cake sweet roll sweet. Muffin caramels jelly ice cream cupcake halvah candy canes cake.
       </p>
 
-      <a href="#"><i class="fa fa-envelope"></i></a>
+      <a href="mailto:annammwilson@gmail.com"><i class="fa fa-envelope"></i></a>
       <a href="#"><i class="fa fa-twitter"></i></a>
       <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
       <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
