--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
     <title>Title TBD</title>
   </head>
   <body>
-    <div class="main">
-      <img alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
+    <div class="container">
+      <div class="main">
+        <img alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
 
-      <h1>Hi, I'm <span class="name">Anna</span></h1>
+        <h1>Hi, I'm <span class="name">Anna</span></h1>
 
-      <p>
-        Cake fruitcake tootsie roll apple pie ice cream I love. Donut chocolate marshmallow powder icing gummi bears marzipan candy. Lollipop sugar plum cake gummies soufflé toffee pie fruitcake candy.
-      </p>
-      <p>
-        Tootsie roll toffee ice cream chocolate bar oat cake chupa chups muffin cake jelly. Chocolate bar jelly I love pudding cotton candy lemon drops. Croissant pastry muffin croissant oat cake jelly beans.
-      </p>
-      <p>
-        Icing pastry tootsie roll sugar plum macaroon cheesecake bear claw. Sugar plum soufflé gingerbread oat cake bear claw cake pastry jujubes wafer. Lemon drops jelly tart I love cake sweet roll sweet. Muffin caramels jelly ice cream cupcake halvah candy canes cake.
-      </p>
+        <p>
+          I entered the tech world by way of <a href="https://www.adadevelopersacademy.org/">Ada Developers Academy</a>.
+          Prior to that, I worked in higher education primarily serving Autistic college students.
+          My work experience and social work education helped develop my strengths in identifying creative solutions and communicating with kindness.
+        </p>
+        <p>
+          Now I continue connecting and problem-solving with people in a different way, by creating practical products that enrich the lives of their users.
+          Currently I am bringing my skillset to Indeed.com as a Software Engineer.
+        </p>
 
-      <a href="mailto:annammwilson@gmail.com"><i class="fa fa-envelope"></i></a>
-      <a href="#"><i class="fa fa-twitter"></i></a>
-      <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
-      <a href="#">Resume</a>
+        <div class="social">
+          <a href="mailto:annammwilson@gmail.com"><i class="fa fa-envelope"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
+          <a href="#">Resume</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
