--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Pacifico">
     <link rel="stylesheet" href="styles.css">
     <title>Title TBD</title>
   </head>
@@ -15,6 +15,10 @@
         <img alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
 
         <h1>Hi, I'm <span class="name">Anna</span></h1>
+
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        <i class="fa fa-heart" aria-hidden="true"></i>
 
         <p>
           I entered the tech world by way of <a href="https://www.adadevelopersacademy.org/">Ada Developers Academy</a>.
