--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Pacifico">
     <link rel="stylesheet" href="styles.css">
-    <title>Title TBD</title>
+    <title>anna mm w</title>
   </head>
   <body>
     <div class="container">
       <div class="main">
-        <img alt="a cute placeholder kitten" src="https://placekitten.com/250/250">
+        <img alt="a woman smiling at a windy waterfront in auckland" src="moi.jpg">
 
         <h1>Hi, I'm <span class="name">Anna</span></h1>
 
