--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <a href="mailto:annammwilson@gmail.com"><i class="fa fa-envelope"></i></a>
           <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
           <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
+          <a href="Wilson_Resume.pdf">Resume</a>
         </div>
       </div>
     </div>
