--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         <div class="social">
           <a href="mailto:annammwilson@gmail.com"><i class="fa fa-envelope"></i></a>
+          <a href="https://twitter.com/annamariem77"><i class="fa fa-twitter"></i></a>
           <a href="https://github.com/annamw77"><i class="fa fa-github"></i></a>
           <a href="https://www.linkedin.com/in/anna-wilson-73a9954b"><i class="fa fa-linkedin"></i></a>
           <a href="Wilson_Resume.pdf">Resume</a>
